app/styles/main.scss
 // Bourbon & Neat
@import '../../bower_components/bourbon/dist/bourbon';
@import '../../bower_components/neat/app/assets/stylesheets/neat';
@import '../../bower_components/bitters/app/assets/stylesheets/_base';

@import 'http://fonts.googleapis.com/css?family=Roboto+Condensed';
@import 'Pusekatt.css';
@import 'browse';
@import 'account';


@mixin if-brightness($amt: 1.1) {
  -o-filter: brightness($amt);
  -ms-filter: brightness($amt);
  -moz-filter: brightness($amt);
  -webkit-filter: brightness($amt);
}

@mixin not-as-shiny {
  color: $white;
  width:120px;
  margin: 10% 0 0 0;
  border: none;
  text-decoration: none;
  border-radius: 0;
  text-shadow: none;
  box-shadow: none;
  font-size: 0.9em;
}

/// Reset

li,ul,h1,h2 {
-webkit-margin-before: 0em;
-webkit-margin-after: 0em;
-webkit-margin-start: 0px;
-webkit-margin-end: 0px;
-webkit-padding-start: 0px;
}




///

a {
  color: inherit;
  text-decoration: none;
}

body {
  background: $black;
  font-family: $secondary-font;

  background:url('http://i.imgur.com/cotiNn3.jpg') no-repeat center center fixed;
  background-size: cover;


  //
  header#main-header{
    // position: fixed;
    background: $orange;
    text-align:center;
    margin: auto;
    position: fixed;
    width: 100%;
    z-index: 5000;
    opacity: 1;

    h1 {
      font-family: $primary-font;
    }

    h1.standard {
      display: none;
    }

    #header-box, #header-box-overlay {
      width: 80%;
      @include media($mobile-s) {
        height: 175px;
      }
      @include media($mobile-l) {
        height: 350px;
      }

      left: 10%;
      opacity: 1;
      z-index: 5000;
      background: transparent;
      margin: 15% 0 15% 0;
      position: absolute;
      padding: 0 0 10px 0;
    }
    #header-box-overlay {
      opacity: 1;
      z-index: 5001;
      background: transparent;
      h1 {
        color: $orange;

        @include media($mobile-s) {
          font-size: 5.0em;
        }
        @include media($mobile-l) {
          font-size: 9.0em;
        }
        font-weight: 300;
        margin: 5px 0 -20px 0;
        font-family: $primary-font;
      }

      h2 {
        color: #eaeaea;
        @include media($mobile-s) {
          font-size: 0.8em;
        }
        @include media($mobile-l) {
          font-size: 1.5em;

        }
        font-family: $secondary-font;
        font-weight: 300;
        letter-spacing: 0.05em;
        margin-top: -35px;
      }
      button {
        @include button(shiny, $orange);
        @include not-as-shiny;
        font-size: 1.5em;
        width: 180px;
        padding: 10px 24px;
      }
    }
  }

  header#main-header.standard{
    height: $std-header-height;
    margin: 0 0 0 0;  //masonry puts something in there that requires this; not needed when masonry fails
    text-align: none;
    top: 0;

    #header-box-overlay, #header-box, h2 {
      display: none;
    }


    h1.standard {
      display: block;

      @include media($mobile-s) {
        font-size: 3.2em;
        font-weight: 300;
        float: left;
        font-family: $primary-font;
        margin: 5px 0 0 10px;
      }
      @include media($mobile-l) {
        font-size: 3.8em;
        margin: 5px 0 0 15px;
      }
    }
    nav#header-nav {
      @include media($mobile-s) {
        position: absolute;
        right: 0;
        top: 10px;
        font-size: 0.8em;
        font-weight: 500;
        text-align: right;

        ul {
          list-style-type: none;
          li {
            display: inherit;
            padding: 0 5px 0 0;
          }
        }

        #header-username {
          position: absolute;
          top: 0;
          right: 0;
          top: 70px;
          padding: 0px 5px 0px 5px;
          background: #333;
          color: #fff;
        }
      }

      @include media($mobile-m) {
        top: 55px;
        ul {
          li {
            padding: 4px 8px 0 8px;
            float: right;
            font-size:1.2em;
          }
        }
        #header-username {
          position: absolute;
          top: 0;
          right: 0;
          top: 10px;
          margin: -60px 7px 0px 0px;
        }
      }
    }
  }

  div#main-container.splash{
    @include outer-container;
    max-width:none;
    width:100%;
    height: 100%;
    opacity: 1;


    position: absolute;
    @include media($mobile-s) { top: 0%; }
    @include media($mobile-m) { top: 0%; }
    @include media($mobile-l) { top: 0%; }
    @include media($desktop)  { top: 0%; }


    div#login, div#signup {
      @include media($mobile-s) {
        @include span-columns(5);
      }
      position: absolute;
      top: 20%;
      opacity: .8;
      z-index: 6000;

      .login-form, .signup-form,  {
        @include media($mobile-s) {
          @include span-columns(3); @include shift(1);
        }
        @include media($mobile-m) {
          @include span-columns(3); @include shift(1);
        }
        @include media($mobile-l) {
          @include span-columns(6); @include shift(3);
        }
        @include media($desktop) {
          @include span-columns(4); @include shift(4);
          margin-top: 20%;
        }
        input {
          display: block;
          clear: both;
          margin-bottom: 10px;
          width: 100%;
          opacity: .8;
          padding: 5px;
          letter-spacing: .8px;
        }
        button {
          @include button(shiny, $orange);
          @include not-as-shiny;
          color: #000;
        }
        // button#login {
        //   @include button(shiny, $orange);
        //   @include not-as-shiny;
        //   position: absolute;
        //   top: 5px;
        //   right: 5px
        // }
        .error {
          opacity: .8;
        }
      }
    }

    div#splash-img-container{
      position: relative;
    }

      #splash-img {
        width: 100%;
        position: relative;
        background-size:cover;
      }

      button#login {
        @include button(shiny, $orange);
        @include not-as-shiny;
        position: absolute;
        top: 5px;
        right: 5px;
        color:$white;
        width:120px;

      }
       p#splash-pet-name {
         position: absolute;
       top: 0;
         right: 10px;
        font-family: $secondary-font;
         opacity: .7;
       letter-spacing: .5px;
       }
    }

    nav#main-nav{
      @include media($mobile-s) {
        position: absolute;
        top: 0;
        right: 5%;
        margin: 0;
        padding: 0;

          a {
            text-decoration: none;
            display: inline-block;
            button {
              @include button(shiny, $orange);
              @include not-as-shiny;
              color: #eaeaea;
              float: left;
              width:120px;
              margin: 5px 20px 0 0;
            }
          }

      }
    }



    div#main-container.standard {
      top: 25%;

      header#pet-header {
        position: fixed;
        z-index: 50;
        margin: 0;
        background: transparent;
        left: 50%;
        width: 40%;
        margin-left: -20%;
        top: $std-header-height;

          h2 {
            font-size: 2.5em;
            font-family: $secondary-font;
            font-weight: 300;
            letter-spacing: .05em;
            background: $black;
            width: 100%;
            text-align: center;
            opacity: 1;
            z-index: 100;
            text-transform: capitalize;
            color: #eaeaea;
            @media screen and (max-width: 480px){
              font-size: 2.0em;
              letter-spacing: .075em;
              margin: 0;
            }
          }

          #about {
            position: absolute;
            top: 100%;
            background: $orange;
            left: 50%;
            width: 65px;
            text-align: center;
            margin: -5px 0 0 -32.5px;
          }

          #profile-container {
              position: absolute;
              left: 50%;
              width: 80%;
              max-width: 600px;
              opacity: .85;
              .profile {
                width: 100%;
                background: #aaa;
                position:fixed;
                font-family:$secondary-font;
                width: 80%;
                margin-left: -40%;
              }
          }


      }
    }
}





div.pic-showcase {
  margin: 120px 0 0 0;
  position: absolute;
  top: 30px;

  div.pic-container {

    margin: 0 0 0 0;
    width: 200px;
    float:left;

    .montageSquare {
      // transition: opacity 1.0s easing;
      // opacity: 1;
      // @include size(250px 250px);
      width:100%;
      @include if-brightness(0.9);

      // border: solid 2px black;
      // transition: margin .2s linear;
      // transition: width .6s linear;
      // transition-delay: margin 0s;

    }

    .flickr {
      // border-radius: 20% ;
      // border-left: solid 2px #0063dc;
      // border-right: solid 2px #ff0084;
    }

    .montageSquare:hover {

      @include if-brightness(1.2);


    }

    .flickr:hover {

      @include if-brightness(1.2);
      // @include size(250px 250px);
      // width: 100%;
      // margin:0 6.25% 0 -6.25%;
      // border-top: solid 4px #0063dc;
      // border-left: solid 4px #0063dc;
      // border-right: solid 4px #ff0084;
      // border-bottom: solid 4px #ff0084;
    }
  }
  // div.pic-container.w2 { width:  120px; }

  // div.pic-container:nth-child(1) {
  //   width: 100px;
  //   }
  //
  div.pic-container:nth-child(1n) {
    // width: 10%;
    // float:left;
    // padding-left:10%;
    }
  div.pic-container:nth-child(2n) {
    // width: 20%;
    // float:right;
    // padding-right:10%;
    }
  }


// form file upload
form#fileupload {
  clear:both;
  z-index:3000;
}

.display-message {
  display: none;
}

.whitebg {
  background: $black;
}

